# sqwok

./: CLAUDE.md  Cargo.toml  Dockerfile  LICENSE  README.md  TODO.md  docker-compose.yaml  logo_256.txt  logo_truecolor.txt
.github/workflows/: ci.yml  release.yml
src/: config.rs  debug_log.rs  main.rs
src/auth/: token.rs
src/channel/: chat.rs  mod.rs  protocol.rs  sync.rs
src/crypto/: group_key.rs  identity.rs  key_exchange.rs  message.rs  mod.rs
src/identity/: credentials.rs  e2e_keys.rs  mod.rs  registration.rs
src/net/: invites.rs  mod.rs  search.rs  ws.rs
src/storage/: contacts.rs  messages.rs  mod.rs
src/tui/: app.rs  event.rs  input.rs  mention.rs  mod.rs  pane.rs  render.rs  render_rows.rs  store.rs  style.rs
src/tui/views/: block_users.rs  chat.rs  chat_picker.rs  command_bar.rs  contacts.rs  error_toast.rs  group_settings.rs  invite.rs  member_list.rs  mod.rs  modal.rs  search.rs
